# Programming_c-

./: .gitignore  CMakeLists.txt  README.md  build.sh  file_1.txt  file_2.txt
.github/workflows/: pull_request.yml
dz1/: CMakeLists.txt  download.sh
dz1/include/: Movie.hpp  Parser.hpp  console_parser.hpp  error.hpp  file.hpp  movie_const.hpp  parcer.hpp  read.hpp
dz1/src/: Movie.cpp  Parser.cpp  console_parser.cpp  error.cpp  file.cpp  main.cpp  parcer.cpp  read.cpp
dz2/: CMakeLists.txt  CmakeLists.txt
dz2/.github/workflows/: pull_request.yml
dz2/include/: echo.hpp  fileError.hpp  ioperation.hpp  pipeLine.hpp  tailOperation.hpp
dz2/src/: cat.cpp  commandParser.cpp  echo.cpp  main.cpp  openFile.cpp  pipeLine.cpp  tail.cpp  tailOperation.cpp
example_data/: file_1.txt  file_2.txt
include/: Error.hpp  cat.hpp  commandParser.hpp  conveyor.hpp  conveyorOperation.hpp  conveyorParser.hpp  echo.hpp  ioperation.hpp  openFile.hpp  tail.hpp
src/: cat.cpp  commandParser.cpp  conveyor.cpp  conveyorOperation.cpp  conveyorParser.cpp  echo.cpp  main.cpp  openFile.cpp  tail.cpp
